--- a/package.json
+++ b/package.json
@@ -1,95 +1,64 @@
 {
-  "name": "svelte-zdog",
-  "version": "0.4.0",
-  "license": "MIT",
-  "homepage": "https://carlos-aguilar.com/svelte-zdog",
-  "description": "svelte components for zdog 3D renders",
-  "author": {
-    "name": "Carlos Aguilar",
-    "email": "hey@carlos-aguilar.com",
-    "url": "https://carlos-aguilar.com"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/wh0am1-dev/svelte-zdog"
-  },
-  "bugs": {
-    "url": "https://github.com/wh0am1-dev/svelte-zdog/issues"
-  },
-  "keywords": [
-    "svelte",
-    "components",
-    "zdog",
-    "3D",
-    "canvas",
-    "svg"
-  ],
-  "type": "module",
-  "svelte": "./dist/index.js",
-  "types": "./dist/index.d.ts",
-  "files": [
-    "dist"
-  ],
-  "exports": {
-    ".": {
-      "types": "./dist/index.d.ts",
-      "svelte": "./dist/index.js"
-    }
-  },
-  "scripts": {
-    "dev": "vite dev --host 0.0.0.0",
-    "build": "vite build && npm run package",
-    "preview": "vite preview",
-    "prepare": "husky install",
-    "package": "svelte-kit sync && svelte-package && publint",
-    "prepublishOnly": "npm run package",
-    "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-    "lint": "prettier --plugin-search-dir . --check . && eslint .",
-    "format": "prettier --plugin-search-dir . --write ."
-  },
-  "lint-staged": {
-    "*.{ts,svelte}": [
-      "svelte-kit sync",
-      "svelte-check --tsconfig ./tsconfig.json",
-      "eslint",
-      "prettier -w -u"
-    ],
-    "*.!(ts|svelte)": [
-      "prettier -w -u"
-    ]
-  },
-  "dependencies": {
-    "@types/zdog": "^1.1.2",
-    "zdog": "^1.1.3"
-  },
-  "peerDependencies": {
-    "svelte": "^4.0.0"
-  },
-  "devDependencies": {
-    "@fontsource/fira-code": "^5.0.3",
-    "@fontsource/outfit": "^5.0.3",
-    "@sveltejs/adapter-static": "^2.0.2",
-    "@sveltejs/kit": "^1.20.5",
-    "@sveltejs/package": "^2.1.0",
-    "@typescript-eslint/eslint-plugin": "^5.60.0",
-    "@typescript-eslint/parser": "^5.60.0",
-    "autoprefixer": "^10.4.14",
-    "eslint": "^8.43.0",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-svelte": "^2.31.0",
-    "husky": "^8.0.3",
-    "lint-staged": "^13.2.2",
-    "postcss": "^8.4.24",
-    "prettier": "^2.8.8",
-    "prettier-plugin-svelte": "^2.10.1",
-    "prettier-plugin-tailwindcss": "^0.3.0",
-    "publint": "^0.1.12",
-    "svelte": "^4.0.0",
-    "svelte-check": "^3.4.4",
-    "tailwindcss": "^3.3.2",
-    "tslib": "^2.5.3",
-    "typescript": "^5.1.3",
-    "vite": "^4.3.9"
-  }
+	"name": "svelte-v5-zdog",
+	"version": "0.0.1",
+	"scripts": {
+		"dev": "vite dev",
+		"build": "vite build && npm run prepack",
+		"preview": "vite preview",
+		"prepare": "svelte-kit sync || echo ''",
+		"prepack": "svelte-kit sync && svelte-package && publint",
+		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+		"format": "prettier --write .",
+		"lint": "prettier --check . && eslint ."
+	},
+	"files": [
+		"dist",
+		"!dist/**/*.test.*",
+		"!dist/**/*.spec.*"
+	],
+	"sideEffects": [
+		"**/*.css"
+	],
+	"svelte": "./dist/index.js",
+	"types": "./dist/index.d.ts",
+	"type": "module",
+	"exports": {
+		".": {
+			"types": "./dist/index.d.ts",
+			"svelte": "./dist/index.js"
+		}
+	},
+	"peerDependencies": {
+		"svelte": "^5.0.0"
+	},
+	"devDependencies": {
+		"@eslint/compat": "^1.2.5",
+		"@eslint/js": "^9.18.0",
+		"@fontsource/fira-code": "^5.1.1",
+		"@fontsource/outfit": "^5.1.1",
+		"@sveltejs/adapter-auto": "^4.0.0",
+		"@sveltejs/kit": "^2.16.0",
+		"@sveltejs/package": "^2.0.0",
+		"@sveltejs/vite-plugin-svelte": "^5.0.0",
+		"@tailwindcss/vite": "^4.0.0",
+		"@types/zdog": "^1.1.7",
+		"eslint": "^9.18.0",
+		"eslint-config-prettier": "^10.0.1",
+		"eslint-plugin-svelte": "^2.46.1",
+		"globals": "^15.14.0",
+		"prettier": "^3.4.2",
+		"prettier-plugin-svelte": "^3.3.3",
+		"prettier-plugin-tailwindcss": "^0.6.11",
+		"publint": "^0.3.2",
+		"svelte": "^5.0.0",
+		"svelte-check": "^4.0.0",
+		"tailwindcss": "^4.0.0",
+		"typescript": "^5.0.0",
+		"typescript-eslint": "^8.20.0",
+		"vite": "^6.0.0"
+	},
+	"dependencies": {
+		"zdog": "^1.1.3"
+	}
 }
